@@ -1,3 +1,11 @@
+2021-06-02  Shahab Vahedi  <shahab@synopsys.com>
+
+	* arc-dis.c (arc_option_arg_t): New enumeration.
+	(arc_options): New variable.
+	(disassembler_options_arc): New function.
+	(print_arc_disassembler_options): Reimplement in terms of
+	"disassembler_options_arc".
+
 2020-10-22  Andrew Burgess <andrew.burgess@embecosm.com>
 
 	* csky-dis.c (csky_get_disassembler): Don't return NULL when there
